--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 h1{
     text-align: center;
     font-size: 25px;
-    color: rgb(151, 61, 61);
+    color: rgb(228, 11, 11);
 }
 body{
     background-color: black;
 }
 .ima{
 
+}
+.ima {
+background-image: url("download.jpeg");
 }
