--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
-h1{
+h1 {
     text-align: center;
     font-size: 25px;
-    color: rgb(228, 11, 11);
+    color: rgba(0, 0, 0, 0.966);
 }
-body{
-    background-color: black;
+body {
+    background-color: rgb(0, 0, 0);
 }
-.ima{
+.floresta {
+  width: 20%;
+  left: 50;
+  height: 20%;
 
 }
-.ima {
-background-image: url("download.jpeg");
+
+.legal {
+  background-color: rgb(60, 80, 168);
+  border: 2px;
+}
+.button{
+display: inline-block;
+padding: 10px 20px;
+
 }
